# uTensor

./: .gitattributes  .gitignore  .gitmodules  .mbedignore  .test_spec.json  ArrayOps.hpp  ArrayTests.hpp  CMakeLists.txt  MathOps.cpp  MathOps.hpp  MathTests.hpp  MatrixOps.hpp  MatrixTest.hpp  MatrixTests.hpp  NnOps.hpp  NnTests.hpp  README.md  context.cpp  context.hpp  context_test.hpp  contribution_guide.md  deep_mnist_mlp.cpp  deep_mnist_mlp.hpp  keywords.txt  library.properties  main.cpp  mbed-os.lib  mbed_app.json  mbed_lib.json  mlp_test.hpp  model.cpp  model.hpp  quantization_utils.cpp  quantization_utils.hpp  requirements.txt  sd-driver.lib  sdtensor.hpp  sdtest.hpp  tensor.cpp  tensor.hpp  (+17 more)
TESTS/: CMakeLists.txt  README.md  context_test.hpp  main.cpp  sdtest.hpp  test.hpp  test_helper.h
TESTS/TensorImport/uint8/: main.cpp
TESTS/allocators/: test_arenaAllocator.cpp
TESTS/constants/add_graph/: ref_z.idx  x_0.idx  y_0.idx
TESTS/constants/deep_mlp/: import-Variable_quint8_const_0.idx
TESTS/constants/idxImport/: float_4d_power2.idx  int16_4d_power2.idx  uint8_4d_power2.idx
TESTS/constants/sdtmp/: tmp2.txt
TESTS/constants/test/: example.txt
TESTS/constants/test_quantized_add/: x_0.idx  z_eightbit_x_reduction_dims_0.idx
TESTS/core/: test_context.cpp  test_quantization_params.cpp  test_types.cpp
TESTS/core/context/: test_core_context.cpp
TESTS/core/tensor/: test_core_binarytensor.cpp  test_core_sdtensor.cpp  test_core_tensor.cpp
TESTS/core/tensorIdxImporter/: test_core_tensorIdxImporter.cpp
TESTS/core/virtualmem/: test_core_virtualmem.cpp
TESTS/data-structures/array/: main.cpp
TESTS/data-structures/matrix/: main.cpp
TESTS/data-structures/tensor/: main.cpp
TESTS/error_handlers/: test_errorhandler.cpp
TESTS/importer/tensor-idx/: main.cpp
TESTS/math/ops/: .main.cpp.swp  main.cpp
TESTS/math/ops-nn/: main.cpp
TESTS/model/: constants_layer_1_quantize.hpp  constants_layer_2_dws_conv2d.hpp  constants_layer_3_dws_conv2d.hpp  constants_layer_4_maxpool.hpp  constants_layer_5_qFC.hpp  input_image.h  integration_test.cpp  params_model.hpp  test_layer_1_quantize.cpp  test_layer_2_dws_conv2d.cpp  test_layer_3_dws_conv2d.cpp  test_layer_4_maxpool.cpp  test_layer_5_qFC.cpp  test_model1.cpp  test_model2.cpp
TESTS/nn/mlp/: main.cpp
TESTS/operators/: constants_argmax.hpp  constants_argmin.hpp  constants_avgpool.hpp  constants_concat.hpp  constants_convolution.hpp  constants_convolution_bias.hpp  constants_convolution_nobias.hpp  constants_dws_convolution.hpp  constants_float_tanh.hpp  constants_maxpool.hpp  constants_quant_fully_connect_1.h  constants_quant_fully_connect_2.h  constants_quantize.hpp  constants_quantized_dws_conv.hpp  constants_quantized_fully_connected.hpp  constants_quantized_fully_connected2x2.hpp  constants_reduce_mean_axis_0_2.hpp  constants_reduce_mean_axis_2.hpp  constants_reduce_mean_axis_2_3.hpp  constants_reduce_mean_axis_first.hpp  constants_reduce_mean_axis_last.hpp  constants_reduce_mean_no_axis.hpp  constants_relu.hpp  constants_reshape.hpp  constants_rsqrt.hpp  constants_sq_conv2d.hpp  constants_sq_logistic.hpp  constants_sq_softmax.hpp  constants_sq_tanh.hpp  constants_squeeze.hpp  constants_stride_slice.hpp  constants_sum.hpp  constants_transpose.hpp  test_argmax.cpp  test_argmin.cpp  test_arithmetic.cpp  test_arithmetic_broadcast.cpp  test_avgpool.cpp  test_concat.cpp  test_convolution.cpp  (+34 more)
TESTS/operators/QuantizedMult/: test_operators_QuantizedMult.cpp
TESTS/operators/Softmax/: generate_test_data.py  test_SoftmadxOp.cpp
TESTS/operators/arrayOps/: test_operators_arrayOps.cpp
TESTS/operators/basicMath/: test_operators_basicMath.cpp
TESTS/operators/fusedconvmaxpool/: test_operators_fusedconvmaxpool.cpp
TESTS/operators/matrix/: test_operators_matrix.cpp
TESTS/operators/quantizedAdd/: add_graph.ipynb  add_graph.pb  test_operators_quantizedAdd.cpp
TESTS/ops/math/: main.cpp
TESTS/pytest/: conftest.py  test_arithmetic_kernels.py  test_broadcast.py  test_conv.py  test_relu.py
TESTS/scripts/: Pipfile  compileTestData.py  gen_arg_min_max.py  gen_avgpool.py  gen_conv.py  gen_maxpool.py
TESTS/scripts/idxImporter/: int32_4d_power2.py
TESTS/tensors/: test_buffertensor.cpp  test_ramtensor.cpp  test_romtensor.cpp
TESTS/uTensor/context/: main.cpp
TESTS/uTensor/importer/: main.cpp
TESTS/util/: test_broadcaster.cpp
python/: .lldb-cmds  CMakeLists.txt  Makefile  Pipfile  README.md  debug.py  scrape_for_events.py  setup.cfg
python/cpp/: _pyuTensor.cpp
python/cpp/impl/: activation.cpp  allocator.cpp  arithmetic_kernels.cpp  broadcast.cpp  conv.cpp  fast_copyop.cpp  matmul.cpp
python/cpp/include/: activation.hpp  allocator.hpp  arithmetic_kernels.hpp  broadcast.hpp  conv.hpp  fast_copyop.hpp  matmul.hpp
python/src/: CMakeLists.txt  _pyuTensor.cpp  play_fastop.cpp  play_fastop.hpp
python/src/pyuTensor/: __init__.py
python/test_scripts/: gen_arg_min_max.py  gen_arithmetic.py  gen_arithmetic_broadcast.py  gen_avgpool.py  gen_concat.py  gen_conv.py  gen_conv_bias.py  gen_conv_nobias.py  gen_dw_conv.py  gen_fc.py  gen_float_fc.py  gen_float_tanh.py  gen_maxpool.py  gen_qconv2d.py  gen_qlogistic.py  gen_qreducemean.py  gen_qsoftmax.py  gen_qtanh.py  gen_reduce_mean.py  gen_relu.py  gen_reshape.py  gen_rsqrt.py  gen_softmax.py  gen_squeeze.py  gen_stride_iterator.py  gen_stride_slice.py  gen_sum.py  gen_tflu_quantize.py  model_base.py
python/test_scripts/jinja_env/: __init__.py  quantization_util.py  utensor_macros.py
python/test_scripts/model_files/: tanh_model.tflite
python/test_scripts/tflu_exported_quantized_tests/: test_import_example.py
src/uTensor/: CMakeLists.txt  README.md
src/uTensor/allocators/: arenaAllocator.cpp  arenaAllocator.hpp
src/uTensor/contexts/: default_context.cpp
src/uTensor/core/: CMakeLists.txt  TensorMap.cpp  TensorMap.hpp  context.cpp  context.hpp  errorHandler.cpp  errorHandler.hpp  memoryManagementInterface.cpp  memoryManagementInterface.hpp  modelBase.cpp  modelBase.hpp  operatorBase.cpp  operatorBase.hpp  platform_guard.hpp  quantizationPrimitives.cpp  sdtensor.hpp  (+15 more)
(+362 files in other folders)
