[metadata]
name = pyuTensor
author = uTensor Dev
author_email = dev@utensor.ai
description = A Python package for uTensor
long_description = file: README.md
version= attr: pyuTensor._version.__version__

[options]
packages = find:
zip_safe = False
install_requires =
    tensorflow ==2.4.4
    torch ==1.7.0
    torchvision

[options.packages.find]
where=src