[metadata]
name = pyuTensor
author = uTensor Dev
author_email = dev@utensor.ai
description = A Python package for uTensor
long_description = file: README.md
version= attr: pyuTensor._version.__version__

[options]
packages = find:
zip_safe = False
install_requires =
    numpy

[options.packages.find]
where=src